--- a/Imdb/Imdb.csproj
+++ b/Imdb/Imdb.csproj
@@ -94,7 +94,8 @@
     <Compile Include="Models\SeenRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MovieDetailsViewModel.cs" />
-    <Compile Include="ViewModels\MovieListViewModel.cs" />
+    <Compile Include="ViewModels\MovieList.cs" />
+    <Compile Include="ViewModels\MoviesIndexViewModel.cs" />
     <Compile Include="ViewModels\UserIndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +103,10 @@
     <Content Include="App_Data\Imdb_log.ldf">
       <DependentUpon>Imdb.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\images\same.png" />
+    <Content Include="Content\images\down.png" />
+    <Content Include="Content\images\new.png" />
+    <Content Include="Content\images\up.png" />
     <Content Include="Global.asax" />
     <Content Include="Views\Movies\Details.aspx" />
     <Content Include="Views\Movies\Index.aspx" />
@@ -161,6 +166,7 @@
       <DependentUpon>Imdb.dbml</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
