--- a/Imdb/Imdb.csproj
+++ b/Imdb/Imdb.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\..\thirdparty\HtmlAgilityPack\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\lib\HtmlAgility\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
